--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">cevc2</string>
+    <string name="app_name">Unforgotten Experiencies</string>
+    <String text="text_name">book your tour with us we have many packages to explore the world</String>
 </resources>
